@@ -4,15 +4,12 @@ import com.dewdrop.aggregate.proxy.AggregateProxyFactory;
 import com.dewdrop.api.result.Result;
 import com.dewdrop.command.CommandMapper;
 import com.dewdrop.read.StreamDetails;
-import com.dewdrop.read.StreamType;
 import com.dewdrop.read.readmodel.StreamDetailsFactory;
 import com.dewdrop.streamstore.repository.StreamStoreGetByIDRequest;
 import com.dewdrop.streamstore.repository.StreamStoreRepository;
 import com.dewdrop.structure.api.Command;
 import com.dewdrop.structure.api.Event;
-import com.dewdrop.structure.api.Message;
 import com.dewdrop.structure.events.CorrelationCausation;
-import com.dewdrop.structure.read.Direction;
 import com.dewdrop.utils.AggregateIdUtils;
 import com.dewdrop.utils.AssignCorrelationAndCausation;
 import com.dewdrop.utils.CommandUtils;
@@ -40,21 +37,15 @@ public class AggregateStateOrchestrator {
     public Result<Object> executeCommand(Command command) {
         Optional<Method> commandHandlerMethod = commandMapper.getCommandHandlersThatSupportCommand(command);
 
-        if (commandHandlerMethod.isEmpty()) {
-            return Result.of(new ArrayList<>());
-        }
+        if (commandHandlerMethod.isEmpty()) { return Result.of(new ArrayList<>()); }
 
-//        command = AssignCorrelationAndCausation.firstCommand(command);
-        log.info("Handling command correlationId:{}, causationId:{}, messageId:{}", command.getCorrelationId(), command.getCausationId(), command.getMessageId());
         return processCommand(command, commandHandlerMethod.get());
     }
 
     public Result<Object> executeSubsequentCommand(Command command, CorrelationCausation previous) {
         Optional<Method> commandHandlerMethod = commandMapper.getCommandHandlersThatSupportCommand(command);
 
-        if (commandHandlerMethod.isEmpty()) {
-            return Result.of(new ArrayList<>());
-        }
+        if (commandHandlerMethod.isEmpty()) { return Result.of(new ArrayList<>()); }
 
         command = AssignCorrelationAndCausation.assignTo(previous, command);
         return processCommand(command, commandHandlerMethod.get());
@@ -65,6 +56,7 @@ public class AggregateStateOrchestrator {
 
         if (optAggregateRoot.isPresent()) {
             AggregateRoot aggregateRoot = optAggregateRoot.get();
+            log.debug("Processing command {}", command.getClass().getSimpleName());
             aggregateRoot = getById(command, aggregateRoot);
             aggregateRoot = executeCommand(command, commandHandlerMethod, aggregateRoot);
             aggregateRoot = save(aggregateRoot);
@@ -81,12 +73,10 @@ public class AggregateStateOrchestrator {
 
     private AggregateRoot executeCommand(Command command, Method handler, AggregateRoot aggregateRoot) {
         try {
-            Object instance = handler.getDeclaringClass()
-                .getDeclaredConstructor()
-                .newInstance();
+            Object instance = handler.getDeclaringClass().getDeclaredConstructor().newInstance();
             Optional<?> result = CommandUtils.executeCommand(instance, handler, command, aggregateRoot);
             if (result.isPresent()) {
-                if(result.get() instanceof List) {
+                if (result.get() instanceof List) {
                     for (Event event : (List<Event>) result.get()) {
                         aggregateRoot.raise(event);
                     }
@@ -105,12 +95,7 @@ public class AggregateStateOrchestrator {
         Optional<UUID> aggregateId = AggregateIdUtils.getAggregateId(command);
         if (aggregateId.isPresent()) {
             StreamDetails streamDetails = streamDetailsFactory.fromAggregateRoot(aggregateRoot, aggregateId.get());
-            StreamStoreGetByIDRequest request = StreamStoreGetByIDRequest.builder()
-                .streamDetails(streamDetails)
-                .aggregateRoot(aggregateRoot)
-                .id(aggregateId.get())
-                .command(command)
-                .create();
+            StreamStoreGetByIDRequest request = StreamStoreGetByIDRequest.builder().streamDetails(streamDetails).aggregateRoot(aggregateRoot).id(aggregateId.get()).command(command).create();
             aggregateRoot = streamStoreRepository.getById(request);
         }
         return aggregateRoot;
